--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,19 @@
   line-height: 1.5;
   font-weight: 400;
 
-  /* color-scheme: light dark; */
+  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #ECEDFC;
+  height: 100vh;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  margin: 0;
 }
 
 a {
@@ -30,6 +35,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin: 0rem;
 }
 
 button {
