refactor: refactor app layout and styling, moved gamemenu to separate component

--- a/src/index.css
+++ b/src/index.css
@@ -7,23 +7,30 @@
     url('./assets/fonts/Basteleur-Moonlight.woff2');
 }
 
-body {
-  font-family: 'Basteleur';
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
-:root {
+body {
+  font-family: 'Basteleur';
+  margin: 0;
+  background-color: #ECEDFC;
+  padding: 0rem 3rem;
+}
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  background-color: #ECEDFC;
   height: 100vh;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
+
 /*
 body {
   margin: 0;
@@ -69,7 +76,7 @@ button:focus-visible {
 }
 */
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ECEDFC;
@@ -80,4 +87,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
